-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.12.4, 5.13.0, 5.14.1
-
-
2020wk22
Video playback through QtMultimedia does not work correctly on iMX8 boards.
In order to use VPU for the video playback on iMX8, the gstreamer pipeline would need to include imxvideoconvert_g2d plugin to convert the special tiling format used by the Malone IP. The playbin plugin used by QtMultimedia does not use this by default and there is not meaningful way to add the plugin into the pipeline, which leaves video playback broken.
- relates to
-
QTBUG-94767 Video playback does not work on iMX8QM board
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-76179 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 288679,4 | Include imx gstreamer plugins on iMX8 | warrior | yocto/meta-boot2qt | Status: MERGED | +2 | 0 |
| 301129,6 | iMX: Introduce QT_GSTREAMER_PLAYBIN_CONVERT to inject a converter in playbin | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 302120,2 | iMX: Introduce QT_GSTREAMER_PLAYBIN_CONVERT to inject a converter in playbin | 5.15 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 302350,2 | imx8: add converter plugin into video pipeline | zeus | yocto/meta-boot2qt | Status: MERGED | +2 | 0 |