iMX: Introduce QT_GSTREAMER_PLAYBIN_CONVERT to inject a converter in playbin

Injects a converter between decoders and video sink.

Pick-to: 5.15
Task-number: QTBUG-76179
Change-Id: If5fc8090bc1ade424a1157e94d83dc5a51051fd7
Reviewed-by: Samuli Piippo <samuli.piippo@qt.io>